# settimeout-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  timer.rs
