[package]
name = "settimeout"
description = "Creates a std::future::Future implementation to be ready at some point"
homepage = "https://github.com/rousan/settimeout-rs"
repository = "https://github.com/rousan/settimeout-rs"
keywords = ["rust", "future", "settimeout", "timeout", "promise"]
categories = ["asynchronous"]
version = "0.1.2"
authors = ["Rousan Ali <rousanali786@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
futures = "0.3.4"